第2回課題提出

--- a/20230617/index.html
+++ b/20230617/index.html
@@ -4,28 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>第2回</title>
-    <meta name="description" content="第2回です。">
+    <title>第2回　コーディング講義</title>
+    <meta name="description" content="第二回目の課題提出です">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
-    <ul>
-        <li>ホーム</li>
-        <li>サービス</li>
-        <li>ニュース</li>
-        <li>会社概要</li>
-        <li>お問い合わせ</li>
-    </ul>
-    <div class="wrap">
-        <div>block01</div>
-        <div>block02</div>
-        <div>block03</div>
+    <!-- work01 -->
+    <div class="wrap_01">
         <div>block01</div>
         <div>block02</div>
         <div>block03</div>
     </div>
+
+    <!-- work02 -->
+    <div class="wrap_02">
+        <div>block01</div>
+        <div>block01</div>
+        <div>block01</div>
+        <div>block01</div>
+        <div>block01</div>
+        <div>block01</div>
+    </div>
+
+    <!-- work03 -->
+    <div class="flex_header">
+        <h1>タイトル</h1>
+        <ul class="flex_list">
+            <li>サービス</li>
+            <li>講師一覧</li>
+            <li>料金プラン</li>
+            <li>会社概要</li>
+            <li>お問い合わせ</li>
+        </ul>
+    </div>
+
 
 </body>
 
