--- a/coding_kadai03_yao/index.html
+++ b/coding_kadai03_yao/index.html
@@ -21,24 +21,18 @@
             <div class="flex_wrap">
                 <ul class="flex_content">
                     <li class="flex_item">
-                        <img src="images/main_1.jpg" alt="main1">
-                        <div class="item_head">
-                            <h3>サービス1</h3>
-                        </div>
+                        <img src="images/main_1.jpg" alt="屋外に集まる人々">
+                        <h3 class="item_head">サービス1</h3>
                         <p>サービス1サービス1サービス1サービス1サービス1サービス1サービス1</p>
                     </li>
                     <li class="flex_item">
-                        <img src="images/main_2.png" alt="main2">
-                        <div class="item_head">
-                            <h3>サービス2</h3>
-                        </div>
+                        <img src="images/main_2.png" alt="コンサートの様子">
+                        <h3 class="item_head">サービス2</h3>
                         <p>サービス2サービス2サービス2サービス2サービス2サービス2サービス2</p>
                     </li>
                     <li class="flex_item">
-                        <img src="images/main_3.png" alt="main3">
-                        <div class="item_head">
-                            <h3>サービス3</h3>
-                        </div>
+                        <img src="images/main_3.png" alt="乾杯の様子">
+                        <h3 class="item_head">サービス3</h3>
                         <p>サービス3サービス3サービス3サービス3サービス3サービス3サービス3</p>
                     </li>
                 </ul>
@@ -47,12 +41,15 @@
     </div>
 
     <script>
-        for (let i = 0; i < 20; i++) {
-            if (i > 20) {
-                console.log("20以上");
-            } else if (i <= 20) {
-                console.log("20未満")
-            }
+        let num = 0;
+        for (i = 1; i <= 10; i++) {
+            num = num + i;
+        }
+        console.log(num)
+        if (num >= 20) {
+            console.log("20以上");
+        } else {
+            console.log("20未満")
         }
     </script>
 </body>
