--- a/coding_kadaicafe_yao/index.html
+++ b/coding_kadaicafe_yao/index.html
@@ -129,7 +129,7 @@
         </section>
 
         <!-- access -->
-        <section class="access">
+        <section id="access">
             <h2 class="section_title"><img src="images/access@2x.png" alt="access"></h2>
             <div>
                 <iframe
