--- a/coding_kadaicafe_yao/index.html
+++ b/coding_kadaicafe_yao/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>デザインカフェ</title>
     <meta name="description" content="デザインカフェのサイトです。">
+    <!-- slickのcssファイルはstyle.cssの前に読み込ませる -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
+    <!-- slickのjsファイルはjqueryの後に読み込ませる。jqueryを読み込んだ後に読み込ませる必要がある -->
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </head>
 
 <!-- コーディング3ステップ
@@ -21,8 +27,24 @@
 小さくなった時にどういうふうに動くか。 -->
     <header id="header">
         <div class="header_slider">
-            <div><img src="images/pc_first-100.jpg" alt="店内の様子"></div>
+            <div>
+                <picture>
+                    <source media="(max-width:767px)" srcset="images/sp_main_vs@2x-100.jpg">
+                    <img src="images/pc_first-100.jpg" alt="店内の様子">
+                </picture>
+            </div>
+            <div>
+                <picture>
+                    <source media="(max-width:767px)" srcset="images/sp_main_vs_2@2x-100.jpg">
+                    <img src="images/slider_2.jpg" alt="店内の様子">
+                </picture>
+            </div>
         </div>
+
+
+
+
+
         <div class="header_wrap">
             <h1 class="header_logo"><img src="images/design_cafe_logo_header@2x.png" alt="DESIGN CAFE"></h1>
             <nav class="pc_nav">
@@ -49,11 +71,11 @@
 
     <main>
         <div id="lead">
-            <div class="wrap pt100 pb50 center">
+            <div class="lead-area wrap pt100 pb50 center">
                 <p class="lead_head mb50">Have a happy day From a cup of coffee.</p>
                 <p class="heading mb50">ハッピーに溢れる1日を<br>
                     1杯のコーヒーから。</p>
-                <p class="text">毎日を丁寧に大切に過ごしたい。だからこそ一杯一杯丁寧にコーヒーを入れ<br>
+                <p class="text">毎日を丁寧に大切に過ごしたい。<br class="sp_only">だからこそ一杯一杯丁寧にコーヒーを入れ<br>
                     足を運んでくれるお客さんには落ち着く空間とこだわりのコーヒーを提供したい。</p>
             </div>
         </div>
@@ -61,13 +83,16 @@
         <!-- ABOUT US -->
         <section id="about">
             <div class="wrap ptb50 flex_content flex_justify">
-                <div class="about_img">
+                <div class="about_img pc_only">
                     <img src="images/pc_about-100.jpg" alt="カフェで提供されたラテアート">
                 </div>
                 <div class="about_txtbox">
                     <h2 class="section_title">
                         <img src="images/about_us@2x.png" alt="about us">
                     </h2>
+                    <div class="about_img-sp sp_only">
+                        <img src="images/about_us@2x-100.jpg" alt="カフェで提供されたラテアート">
+                    </div>
                     <p class="about_txtbox-head">私たちが提供する<br>こだわりのコーヒー</p>
                     <p class="about_txtbox-p">
                         サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。サービスを提供する上での想いや心がけていることなど、メッセージを文章で紹介します。
@@ -82,21 +107,27 @@
                 <h2 class="section_title center"><img src="images/menu@2x.png" alt="about us"></h2>
                 <ul class="flex_content flex_justify">
                     <li class="menu_box">
-                        <img src="images/pc_menu_drink-100.jpg" alt="カフェオレ">
+                        <div class="menu_box-img">
+                            <img src="images/pc_menu_drink-100.jpg" alt="カフェオレ">
+                        </div>
                         <span>Drink</span>
                         <p>
                             ドリンクメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
                         </p>
                     </li>
                     <li class="menu_box">
-                        <img src="images/pc_menu_food-100.jpg" alt="パスタ">
+                        <div class="menu_box-img">
+                            <img src="images/pc_menu_food-100.jpg" alt="パスタ">
+                        </div>
                         <span>Food</span>
                         <p>
                             フードメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
                         </p>
                     </li>
                     <li class="menu_box">
-                        <img src="images/pc_menu_sweets-100.jpg" alt="スイーツ">
+                        <div class="menu_box-img">
+                            <img src="images/pc_menu_sweets-100.jpg" alt="スイーツ">
+                        </div>
                         <span>Sweets</span>
                         <p>
                             スイーツメニューの概要を100文字程度で紹介します。素材やこだわりなどをアピールしていきます。
@@ -173,12 +204,18 @@
     </div>
 
     <script>
-        // $(function () {});　は、全てのhtnlを読み込んだらという意味
+        // $(function () {});　は、全てのhtmlを読み込んだらという意味
         $(function () {
             //ここの中に記述
             $('.sp_btn, .sp_nav li').on('click', function () {
                 $('.sp_nav').fadeToggle();
                 $('.sp_btn').toggleClass('open');
+            });
+            $('.header_slider').slick({
+                // autoplay: true,
+                autoplaySpeed: 2000,
+                dots: true,
+                arrows: false,
             });
         });
     </script>
