--- a/portfolio_yao/work2.html
+++ b/portfolio_yao/work2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>toricom design｜大阪のフリーランスデザイナー</title>
+    <title>サンプル/会員制コワーキングLP｜toricom design</title>
     <meta name="description"
         content="toricom design｜クライアント様と緊密な連携をし、縁の下で効果的に支える役割を果たします。デザインがシームレスにビジネス戦略に統合されるよう努力し、成功の一翼を担います。">
 
@@ -27,19 +27,19 @@
     <link rel="stylesheet" href="./assets/css/common.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/works.css">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/d4da78b684.js" crossorigin="anonymous"></script>
 </head>
 
-<body id="index">
+<body id="work">
     <header class="header block section">
         <div class="header-inner inner flex_content flex_justify">
             <h1 class="header-logo">
-                <a href="#"><img src="./assets/img/logo.png" alt="toricom design" class="full"></a>
+                <a href="index.html"><img src="./assets/img/logo.png" alt="toricom design" class="full"></a>
             </h1>
             <ul class="header-inner_list flex_content flex_middle">
-                <li class="header-inner_listitem header-inner_listitem--work">
+                <li class="prelative header-inner_listitem header-inner_listitem--work">
                     <a href="works.html">Works</a>
                 </li>
                 <li class="header-inner_listitem header-inner_listitem--about">
@@ -51,41 +51,57 @@
             </ul>
         </div>
     </header>
-
-    <main>
-        <!-- ーーーメインビジュアルここからーーー -->
-        <div class="mv prelative mb150">
-            <div class="mv-bg">
-                <img src="./assets/img/mv_bg.jpg" alt="笑顔の三毛猫" class="full">
-            </div>
-            <p class="mv-txt">
-                信頼できる<br>
-                クリエイティブパートナーに<br>
-                なることを目指します。
-            </p>
+    <!-- パンくずリスト -->
+    <div class="section">
+        <div class="inner breadcrumb-inner">
+            <ol class="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList">
+                <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem" class="en">
+                    <a itemprop="item" href="index.html">
+                        <span itemprop="name">TOP</span>
+                    </a>
+                    <meta itemprop="position" content="1">
+                </li>
+                <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem" class="en">
+                    <a itemprop="item" href="works.html">
+                        <span itemprop="name">Works</span>
+                    </a>
+                    <meta itemprop="position" content="2">
+                </li>
+                <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem">
+                    <a itemprop="item" href="work2.html">
+                        <span itemprop="name">サンプル/会員制コワーキングLP</span>
+                    </a>
+                    <meta itemprop="position" content="3">
+                </li>
+            </ol>
         </div>
-        <!-- ーーーメインビジュアルここまでーーー -->
-
-        <!-- ーーーWorksここからーーー -->
-        <section class="section works mb150">
-            <div class="inner works-inner">
-                <h2 class="center mb70">Work</h2>
-                <div class="flex_content flex_justify mb70 gap works-inner_content">
-                    <div class="works-inner_item">
-                        <div class="mb2">
-                            <a href="work1.html"><img src="./assets/img/work1.jpg" alt="美容室サイト" class="full"></a>
-                        </div>
-                        <h3>サンプル/美容室サイト</h3>
-                        <p>Design</p>
-                    </div>
-                    <div class="works-inner_item">
-                        <div class="mb2">
-                            <a href="work2.html"><img src="./assets/img/work2.jpg" alt="会員制コワーキングLP" class="full"></a>
-                        </div>
-                        <h3>サンプル/会員制コワーキングLP</h3>
-                        <p>Design</p>
-                    </div>
+    </div>
+    <main class="work2" id="work2">
+        <div class="mv-img mb100">
+            <img src="./assets/img/work.jpg" alt="サンプル/会員制コワーキングLP" class="full">
+        </div>
+        <section class="section work-main">
+            <div class="inner work-content">
+                <div class="mb100 work-content_head">
+                    <span class="iblock mb1">WEB</span>
+                    <p class="work-content_intro mb1">コーポレートサイト</p>
+                    <h2 class="mb1">サンプル/コワーキングスペースのLP制作</h2>
+                    <p class="work-content_info mb3">
+                        担当箇所の説明や、サイトの目的、事業内容の説明など、担当箇所の説明や、サイトの目的、事業内容の説明など、担当箇所の説明や、サイトの目的、事業内容の説明など、担当箇所の説明や、サイトの目的、事業内容の説明など、
+                    </p>
+                    <span class="iblock mb05">Visit Site</span>
+                    <p class="en mb2">-nolink-</p>
+                    <span class="iblock mb05">My Role</span>
+                    <p class="en">Design</p>
                 </div>
+                <div class="work-content_img">
+                    <img src="./assets/img/work2_pc.webp" alt="サンプル/会員制コワーキングLP" class="full">
+                </div>
+            </div>
+        </section>
+        <section class="section mb150">
+            <div class="inner otherworks">
+                <h2 class="center mb70">Other Works</h2>
                 <div class="flex_content flex_justify mb70 gap works-inner_content">
                     <div class="works-inner_item">
                         <div class="mb2">
@@ -120,40 +136,12 @@
                 </div>
                 <div class="mauto prelative center btn">
                     <div class="iblock btn-hover">
-                        <a href="/work.html" class="center">View More Works</a>
+                        <a href="works.html" class="center">View All</a>
                         <i class="fa-solid fa-chevron-right"></i>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- ーーーWorksここまでーーー -->
-
-        <!-- ーーーaboutここからーーー -->
-        <div class="section about mb200">
-            <div class="inner about-inner">
-                <div class="flex_content flex_middle about-inner_gap">
-                    <div class="about-inner_img">
-                        <img src="./assets/img/about.png" alt="toricom design" class="full">
-                    </div>
-                    <div class="about-inner_txt">
-                        <p class="mb1 en title">Designer</p>
-                        <p class="mb3 about-inner_name">八尾　祥好</p>
-                        <p>大阪生まれ大阪育ち。京都のデザイン会社に所属しながらフリーのWEBデザイナーとして活動中。</p>
-                        <p>小さい頃から動物が好きで、現在も小動物カフェとデザイン会社
-                            の掛け持ちをしながら個人でデザイン業をしています。</p>
-                        <p>家には三毛猫2匹とフクロモモンガが居てます。
-                            毎日かわいいです。</p>
-                        <div class="prelative btn">
-                            <div class="iblock btn-hover">
-                                <a href="/about.html" class="center">View More About</a>
-                                <i class="fa-solid fa-chevron-right"></i>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- ーーーaboutここまでーーー -->
     </main>
 
     <footer class="footer center">
