--- a/portfolio_yao/thanks.html
+++ b/portfolio_yao/thanks.html
@@ -1,14 +1,120 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>thanks｜toricom design</title>
+    <meta name="description"
+        content="toricom design｜クライアント様と緊密な連携をし、縁の下で効果的に支える役割を果たします。デザインがシームレスにビジネス戦略に統合されるよう努力し、成功の一翼を担います。">
+
+    <meta property="og:locale" content="ja_JP">
+    <meta property="og:image" content="https://toricom.jp/img/og-image.jpg">
+    <meta property="og:title" content="toricom design">
+    <meta property="og:description"
+        content="toricom designはクライアント様と緊密な連携をし、縁の下で効果的に支える役割を果たします。デザインがシームレスにビジネス戦略に統合されるよう努力し、成功の一翼を担います。">
+    <meta property="og:url" content="https://toricom.jp">
+    <meta property="og:site_name" content="toricom design">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+
+    <link rel="icon" href="./favicon.ico">
+    <!-- Googlefonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+    <link rel="stylesheet" href="./assets/css/common.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <link rel="stylesheet" href="./assets/css/contact.css">
+    <!-- fontawesome -->
+    <script src="https://kit.fontawesome.com/d4da78b684.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body id="thanks">
+    <header class="header block section">
+        <div class="header-inner inner flex_content flex_justify">
+            <h1 class="header-logo">
+                <a href="index.html"><img src="./assets/img/logo.png" alt="toricom design" class="full"></a>
+            </h1>
+            <ul class="header-inner_list flex_content flex_middle">
+                <li class="header-inner_listitem header-inner_listitem--work">
+                    <a href="works.html">Works</a>
+                </li>
+                <li class="header-inner_listitem header-inner_listitem--about">
+                    <a href="about.html">About</a>
+                </li>
+                <li class="header-inner_listitem header-inner_listitem--contact">
+                    <a href="contact.html">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <!-- パンくずリスト -->
+    <div class="section">
+        <div class="inner breadcrumb-inner">
+            <ol class="breadcrumb" itemscope itemtype="https://schema.org/BreadcrumbList">
+                <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem" class="en">
+                    <a itemprop="item" href="index.html">
+                        <span itemprop="name">TOP</span>
+                    </a>
+                    <meta itemprop="position" content="1">
+                </li>
+                <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem" class="en">
+                    <a itemprop="item" href="works.html">
+                        <span itemprop="name">Thanks!</span>
+                    </a>
+                    <meta itemprop="position" content="2">
+                </li>
+            </ol>
+        </div>
+    </div>
+    <main class="contact" id="contact-main">
+        <div class="mv-img mb150">
+            <img src="./assets/img/thanks.jpg" alt="お問い合わせありがとうございました" class="full">
+        </div>
 
+        <section class="section thanks-head mb150">
+            <div class="inner">
+                <span class="iblock mb1">お問い合わせフォームの送信を完了しました。</span>
+                <h2 class="mb70"><span class="orange">T</span>hank <span class="green">y</span>ou for your inquiry</h2>
+                <p class="mb2">
+                    この度はお問い合わせ頂きまして誠にありがとうございます。<br>
+                    ご入力頂いたメールアドレス宛へ、後日ご確認のメールをさせて頂きます。<br>
+                    返信は2〜3日ほどお時間を頂戴する場合がございます。今しばらくお待ちくださいませ。
+                </p>
+                <p class="thanks-note note">
+                    ※送信後に確認メールが届かない場合は、フォームご入力のメールアドレスの誤り、もしくはシステム等の不具合が考えられます。<br>
+                    その際にはお手数ですがもう一度フォームの送信をお願いいたします。<br>
+                    また、まれに迷惑メールフォルダへ入っている場合がございますので、合わせてご確認ください。
+                </p>
+            </div>
+        </section>
+        <div class="mauto prelative center btn mb200">
+            <div class="iblock btn-hover">
+                <a href="index.html" class="center">トップページへ戻る</a>
+                <i class="fa-solid fa-chevron-right"></i>
+            </div>
+        </div>
+    </main>
+
+    <footer class="footer center">
+        <div class="page-top prelative">
+            <a href="#" class="block"><i class="fa-solid fa-angle-up"></i></a>
+        </div>
+        <div class="footer-inner">
+            <div class="footer-sns flex_content flex_center mb2 gap">
+                <a href="https://www.instagram.com/yao.s_web/" target="_blank">
+                    <img src="./assets/img/ig-ico.png" alt="Instagram">
+                </a>
+                <a href="https://www.facebook.com/shoko.yao.98/" target="_blank">
+                    <img src="./assets/img/fb-ico.png" alt="Facebook">
+                </a>
+            </div>
+            <p class="en">© 2023 toricom design yao</p>
+        </div>
+    </footer>
 </body>
 
 </html>
